force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Channel_Name__c</fullName>
    <description>Unique Channel Name</description>
    <inlineHelpText>Please provide a unique channel name. 
This will be used in the Process Builder, Flow and Apex to identify the channel.</inlineHelpText>
    <label>Channel Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>