force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Description__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Description__c</fullName>
    <description>Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>