force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>lwapic__EndpointURL__c</fullName>
    <description>Endpoint URL</description>
    <inlineHelpText>API EndpointURL. Use &quot;Callout:&quot; format for named credentials endpoints. For others use full end point URL starts with &quot;https://&quot;. Make sure to create remote site settings for all endpoint URLs.</inlineHelpText>
    <label>Endpoint URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>