force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Header_data__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Header_data__c</fullName>
    <inlineHelpText>Please select the header data to send in the callout request</inlineHelpText>
    <label>Header Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CallbackURL</fullName>
            </value>
            <value>
                <fullName>OrgId</fullName>
            </value>
            <value>
                <fullName>JobId</fullName>
            </value>
            <value>
                <fullName>UserId</fullName>
            </value>
            <value>
                <fullName>SettingsId</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>