force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__IsActive__c.field-meta.xml
<CustomField>
    <fullName>lwapic__IsActive__c</fullName>
    <description>Is Active</description>
    <label>Is Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>