force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Query_Params__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Query_Params__c</fullName>
    <description>Query Params - comma separated user input</description>
    <inlineHelpText>Please provide the data in any of the following format. This will be reconciled and sent as request param.
KEY-VALUE - Key1={!Name}&amp;
Key2=Michael&amp;
Key3={!$User.Name}&amp;
Key4={!$Organization.Name}&amp;
Key5={!$Setup.api_custom_setting__c.username__c}&amp;
Key6={0}&amp;
key7={!$CustomMetadata.Support_Tier__mdt.Bronze.field__c}

Please note - Only &apos;&amp;&apos; should be used as a data separator</inlineHelpText>
    <label>Query Params</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>