force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Request_Data_Separator__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Request_Data_Separator__c</fullName>
    <description>Request Data Separator</description>
    <inlineHelpText>Please provide the Request Data Separator. This will be separate the Request Payload data with the separator which you selected here. Ignore for JSON type data</inlineHelpText>
    <label>Request Data Separator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>lwapic__Data_Separator</valueSetName>
    </valueSet>
</CustomField>