force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Request_Generator__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Request_Generator__c</fullName>
    <inlineHelpText>Apex class name to generate custom request payload.</inlineHelpText>
    <label>Request Generator Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>