force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Request_Header__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Request_Header__c</fullName>
    <description>Comma separated Request Header</description>
    <inlineHelpText>Please provide the Request Header in any of the following format to avail in callout
KEY-VALUE - Key1={!Name},
Key2=Michael,
Key3={!$User.Name},
Key4={!$Organization.Name},
Key5={!$Setup.api_custom_setting__c.username__c},
Key6={0},
key7={!$CustomMetadata.Support_Tier__mdt.Bronze.field__c}

Please note - Data separator can be either comma or line break</inlineHelpText>
    <label>Request Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>