force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Request_Header_Generater__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Request_Header_Generater__c</fullName>
    <inlineHelpText>Please specify Apex Class name for custom header data generation</inlineHelpText>
    <label>Request Header Generator Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>