force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Request_Paylaod__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Request_Paylaod__c</fullName>
    <description>Request Paylaod - User input as JSON</description>
    <inlineHelpText>Please provide the data in the following format:
TEXT            - This is a sample text. Company website is {!Site}. Please contact {0} for assistance
KEY-VALUE  - Key={!Name},Key Two=Michael
JSON            - {&quot;Key&quot;:&quot;{!Name}&quot;,&quot;Key Two&quot;:&quot;Michael&quot;}
XML              - &lt;Key&gt; Ceptes &lt;/Key&gt; &lt;Key Two&gt; Software &lt;Key Two&gt;</inlineHelpText>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>