force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Service_logo_URL__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Service_logo_URL__c</fullName>
    <inlineHelpText>Please provide the URL for the Service logo</inlineHelpText>
    <label>Service Logo URL</label>
    <type>Url</type>
</CustomField>