force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Service_Name__c</fullName>
    <description>Service Name</description>
    <inlineHelpText>Please provide Service or Service Provider Name.
E.g. LinkedIn, Twitter, Zoom etc.</inlineHelpText>
    <label>Service Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>