force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Version__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Version__c</fullName>
    <defaultValue>1.0</defaultValue>
    <description>Verison</description>
    <inlineHelpText>Verison</inlineHelpText>
    <label>Version</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>